--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
+[Pp]ackages/
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
@@ -34,3 +35,27 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+#Mac
+# Folder view configuration files
+.DS_Store
+Desktop.ini
+
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+# Compiled Python files
+*.pyc
+
+# Compiled C++ files
+*.out
+
+# Application specific files
+venv
+node_modules
+.sass-cache
